--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -620,31 +620,13 @@ label {
   position: absolute;
   z-index: 2;
   width: 100%;
-  max-height: 100%;
+  height: 100%;
   opacity: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 #background {
   z-index: 1;
   position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   height: 100%;
   width: 100%;
   max-height: 100%;
@@ -965,17 +947,20 @@ label {
   border-top: 1px solid black;
   background-color: white;
   width: 100% !important;
-}
-
-.info-up {
-  -webkit-transform: translateY(-100%);
-          transform: translateY(-100%);
+  max-height: calc(100vh - 59px);
+  overflow-y: auto;
 }
 
 .ArtworkInfo-wrapper {
   width: 100%;
   max-width: 600px;
   padding: 10px 0px 20px 20px;
+  height: 100%;
+}
+
+.info-up {
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
 }
 
 .ArtworkInfo-preview-container {
@@ -1452,6 +1437,7 @@ label {
   -webkit-transition: height 0.2s !important;
   transition: height 0.2s !important;
   height: 100%;
+  max-height: 100%;
   display: -webkit-box !important;
   display: -ms-flexbox !important;
   display: flex !important;
@@ -1764,19 +1750,12 @@ label {
     display: initial;
     border-left: none;
   }
-  .pinch-to-zoom-container {
-    display: none;
-    border: none;
-  }
   .enlarge-scroll-down {
     display: -ms-grid;
     display: grid;
     -webkit-transform: translateY(0px);
             transform: translateY(0px);
     top: 0;
-  }
-  .enlarge-scroll-down .pinch-to-zoom-container {
-    display: initial;
   }
   .scroll-down {
     top: 0;
@@ -1915,7 +1894,10 @@ label {
     overflow-y: auto;
   }
   .pinch-to-zoom-area {
-    height: auto !important;
+    height: 100% !important;
+  }
+  .pinch-to-zoom-container {
+    display: inline-block !important;
   }
 }
 /*# sourceMappingURL=frontEndMain.css.map */
