--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -30,6 +30,7 @@
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
   overflow: hidden;
+  margin-bottom: 0;
 }
 
 .FilterTree-title_categories {
@@ -61,6 +62,13 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.title-letter {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .FilterTree-form {
@@ -235,13 +243,36 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   border: 1px solid black;
   margin: 8px 8px 0 0;
   padding: 4px;
+}
+
+.yearLocation-container {
+  border: 1px solid black;
+  margin: 12px 0;
+}
+
+.yearLocation-list {
+  margin: 0;
+  padding: 0;
+  padding-left: 8px;
+  font-size: 12px;
+  overflow: hidden;
+  border: 1px solid;
+  border-top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.yearLocation-item:last-child {
+  margin-bottom: 8px;
 }
 
 @media only screen and (max-width: 720px) {
@@ -259,6 +290,9 @@
   .show-menu {
     -webkit-transform: translateX(0);
             transform: translateX(0);
+  }
+  .FilterTree-caret {
+    opacity: 0.5;
   }
 }
 
