--- a/client/src/css/components/_FilterTree.scss
+++ b/client/src/css/components/_FilterTree.scss
@@ -1,3 +1,6 @@
+ul{
+    list-style: none;
+}
 .FilterTree-container{
     height: 100%;
     width: 300px;
@@ -11,7 +14,7 @@
 .FilterTree-container_main{
     border: 1px solid black;
     border-top: 0;
-    padding: 0 7px !important
+    padding: 0 7px 12px 7px !important;
 }
 .FilterTree-wrapper{
     margin: 8px !important;
@@ -34,11 +37,10 @@
 .FilterTree-form_categories .FilterTree-caret{
     margin-right: 0 !important;
 }
-// .FilterTree-container_main:not(.FilterTree-list_closed){
-//     border-bottom: 1px solid black !important;
-// }
 .FilterTree-list_closed{
     border-bottom: 0 !important;
+    padding: 0 7px !important;
+    max-height: 0;
 }
 .FilterTree-subcategory_item{
     padding: 0 0 5px 15px;
@@ -48,10 +50,14 @@
 .FilterTree-title{
     position: relative;
     margin-left: 28px;
-    width: 100%;
     cursor: pointer;
-    display: flex;
-    justify-content: space-between;
+}
+.FilterTree-title{
+    font-size: 14px;
+    width: 100%;
+}
+.list-item{
+    width: auto;
 }
 .title-letter{
     user-select: none;
@@ -65,9 +71,13 @@
 .FilterTree-form_category-title{
     border: 1px solid black !important;
     padding: 8px 0 8px 8px;
+    width: 100%;
 }
 .FilterTree-form:hover{
     border-bottom: 1px dotted black;
+}
+.FilterTree-subcategories{
+    margin-top: 12px;
 }
 .FilterTree-item_listItem{
     position: relative;
@@ -137,7 +147,7 @@
     background-color: #ffffff;
 }
 .styledCheckbox-container input:checked ~ .styleCheckbox-checkmark {
-    background-color: #e6e6e6 !important;
+    background-color: rgba(0,0,0,0.07) !important;
 }
 // Caret OPEN / CLOSE list
 .FilterTree-caret{
@@ -212,12 +222,17 @@
 .yearLocation-item:last-child{
     margin-bottom: 8px;
 }
+.TagsMen-yearLocation-dropdown{
+    padding-top: 0;
+}
 @media only screen and (max-width: 720px) {
     .FilterTree-container{
-        height: calc(100% - 90px);
-        width: calc(100% - 100px);
+        // height: calc(100% - 90px);
+        position: absolute;
+        height: 100%;
+        width: calc(100% - 50px);
         transform: translateX(-100%);
-        transition: transform 0.2s;
+        transition: transform 0.2s !important;
         border-right: 1px solid black;
     }
     .show-menu{
