--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -1,3 +1,7 @@
+ul {
+  list-style: none;
+}
+
 .FilterTree-container {
   height: 100%;
   width: 300px;
@@ -12,7 +16,7 @@
 .FilterTree-container_main {
   border: 1px solid black;
   border-top: 0;
-  padding: 0 7px !important;
+  padding: 0 7px 12px 7px !important;
 }
 
 .FilterTree-wrapper {
@@ -43,6 +47,8 @@
 
 .FilterTree-list_closed {
   border-bottom: 0 !important;
+  padding: 0 7px !important;
+  max-height: 0;
 }
 
 .FilterTree-subcategory_item {
@@ -54,14 +60,16 @@
 .FilterTree-title {
   position: relative;
   margin-left: 28px;
-  width: 100%;
   cursor: pointer;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+}
+
+.FilterTree-title {
+  font-size: 14px;
+  width: 100%;
+}
+
+.list-item {
+  width: auto;
 }
 
 .title-letter {
@@ -85,10 +93,15 @@
 .FilterTree-form_category-title {
   border: 1px solid black !important;
   padding: 8px 0 8px 8px;
+  width: 100%;
 }
 
 .FilterTree-form:hover {
   border-bottom: 1px dotted black;
+}
+
+.FilterTree-subcategories {
+  margin-top: 12px;
 }
 
 .FilterTree-item_listItem {
@@ -167,7 +180,7 @@
 }
 
 .styledCheckbox-container input:checked ~ .styleCheckbox-checkmark {
-  background-color: #e6e6e6 !important;
+  background-color: rgba(0, 0, 0, 0.07) !important;
 }
 
 .FilterTree-caret {
@@ -275,16 +288,21 @@
   margin-bottom: 8px;
 }
 
+.TagsMen-yearLocation-dropdown {
+  padding-top: 0;
+}
+
 @media only screen and (max-width: 720px) {
   .FilterTree-container {
-    height: calc(100% - 90px);
-    width: calc(100% - 100px);
+    position: absolute;
+    height: 100%;
+    width: calc(100% - 50px);
     -webkit-transform: translateX(-100%);
             transform: translateX(-100%);
-    -webkit-transition: -webkit-transform 0.2s;
-    transition: -webkit-transform 0.2s;
-    transition: transform 0.2s;
-    transition: transform 0.2s, -webkit-transform 0.2s;
+    -webkit-transition: -webkit-transform 0.2s !important;
+    transition: -webkit-transform 0.2s !important;
+    transition: transform 0.2s !important;
+    transition: transform 0.2s, -webkit-transform 0.2s !important;
     border-right: 1px solid black;
   }
   .show-menu {
@@ -743,6 +761,7 @@ label {
   width: 100%;
   height: 100%;
   opacity: 1;
+  max-height: 100%;
 }
 
 #background {
@@ -923,7 +942,7 @@ label {
 .Tags-item_container {
   font-family: 'Courier New', Courier, monospace;
   border: 1px solid black;
-  padding: 4px 7px 2px 7px;
+  padding: 2px 7px 2px 7px;
   margin: 2px 3px;
   cursor: pointer;
 }
@@ -987,7 +1006,7 @@ label {
   height: 50px;
   width: 100%;
   bottom: 0;
-  background-color: yellow;
+  background-color: white;
 }
 
 .previewBubble-container {
@@ -1043,10 +1062,8 @@ label {
           justify-content: flex-end;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
-  -webkit-transition: .4s opacity, 0.2s -webkit-transform !important;
-  transition: .4s opacity, 0.2s -webkit-transform !important;
-  transition: 0.2s transform !important, .4s opacity;
-  transition: 0.2s transform !important, .4s opacity, 0.2s -webkit-transform !important;
+  -webkit-transition: 0.2s all !important;
+  transition: 0.2s all !important;
   position: absolute;
   border-top: 1px solid black;
   background-color: white;
@@ -1542,9 +1559,13 @@ label {
   .TagsMenu-category-title:hover * {
     color: black;
   }
-  * {
+  .enlargeContainer * {
     -webkit-transition: 0s all !important;
     transition: 0s all !important;
+  }
+  .ArtworkInfo-container {
+    -webkit-transition: 0.2s all !important;
+    transition: 0.2s all !important;
   }
   #foreground {
     mix-blend-mode: unset;
@@ -1565,16 +1586,13 @@ label {
     max-height: 70px;
   }
   .menu-container {
-    right: 0;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     height: 100%;
-    position: absolute;
-    bottom: 50px;
     width: 100px;
     background-color: white;
-    border-top: 1px solid black;
+    cursor: pointer;
     border-left: 1px solid black;
   }
   .menu-title {
@@ -1629,7 +1647,7 @@ label {
             flex: 1;
     height: 100%;
     border: none;
-    max-width: calc(100% - 100px);
+    max-width: calc(100% - 200px);
   }
   .previewBubble-wrapper {
     position: initial;
