--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -305,6 +305,10 @@ ul {
     transition: transform 0.2s, -webkit-transform 0.2s !important;
     border-right: 1px solid black;
   }
+  .FilterTree-form {
+    border-bottom: 1px dotted rgba(0, 0, 0, 0.7);
+    padding-top: 5px;
+  }
   .show-menu {
     -webkit-transform: translateX(0);
             transform: translateX(0);
@@ -723,8 +727,8 @@ label {
   width: 1px;
   position: absolute;
   max-width: 100%;
-  -webkit-transition: 0.4s all;
-  transition: 0.4s all;
+  -webkit-transition: 0.3s all;
+  transition: 0.3s all;
   -webkit-transform-origin: right;
           transform-origin: right;
   -webkit-transform: translateX(100%);
@@ -1559,10 +1563,6 @@ label {
   .TagsMenu-category-title:hover * {
     color: black;
   }
-  .enlargeContainer * {
-    -webkit-transition: 0s all !important;
-    transition: 0s all !important;
-  }
   .ArtworkInfo-container {
     -webkit-transition: 0.2s all !important;
     transition: 0.2s all !important;
@@ -1606,7 +1606,7 @@ label {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    padding-right: 5px;
+    padding: 0 5px;
   }
   .menu-title * {
     color: black !important;
@@ -1820,6 +1820,14 @@ label {
             transform: none;
     overflow: hidden;
     bottom: calc(100% - 49px);
+    -webkit-transform: translateY(calc(-100% + 49px));
+            transform: translateY(calc(-100% + 49px));
+    top: unset;
+    bottom: unset;
+  }
+  .enlargeContainer * {
+    -webkit-transition: 0.3s all !important;
+    transition: 0.3s all !important;
   }
   .enlarge-info {
     display: -webkit-box;
@@ -1839,11 +1847,8 @@ label {
     border-left: none;
   }
   .enlarge-scroll-down {
-    display: -ms-grid;
-    display: grid;
     -webkit-transform: translateY(0px);
             transform: translateY(0px);
-    top: 0;
   }
   .scroll-down {
     top: 0;
