--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -304,6 +304,10 @@ ul {
     transition: transform 0.2s !important;
     transition: transform 0.2s, -webkit-transform 0.2s !important;
     border-right: 1px solid black;
+    -ms-grid-row: 2;
+        grid-row-start: 2;
+    grid-row-end: 3;
+    width: 80%;
   }
   .show-menu {
     -webkit-transform: translateX(0);
@@ -312,6 +316,66 @@ ul {
   .FilterTree-caret {
     opacity: 0.5;
   }
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+
+.mobileBar {
+  width: 100%;
+  height: 60px;
+  border: 2px solid;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.menu-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 80%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 8px;
+}
+
+.mobileBar-top {
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+}
+
+.mobileBar-bottom {
+  -ms-grid-row: 3;
+      grid-row-start: 3;
+}
+
+.mobileBars-navButton_container {
+  height: 100%;
+  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.mobileBar-navButton {
+  height: 100%;
+  border: 0;
+  background-color: white;
+}
+
+.mobileBar-navButton img {
+  height: 100%;
 }
 
 * {
@@ -556,11 +620,6 @@ label {
   border-left: 1px solid black;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
-}
-
-#button-next, #button-prev {
-  -webkit-transition: 0.2s all;
-  transition: 0.2s all;
 }
 
 .move-left {
@@ -1559,10 +1618,6 @@ label {
   .TagsMenu-category-title:hover * {
     color: black;
   }
-  .enlargeContainer * {
-    -webkit-transition: 0s all !important;
-    transition: 0s all !important;
-  }
   .ArtworkInfo-container {
     -webkit-transition: 0.2s all !important;
     transition: 0.2s all !important;
@@ -1715,8 +1770,8 @@ label {
   .frontEndIndex-container {
     -ms-grid-columns: 100%;
         grid-template-columns: 100%;
-    -ms-grid-rows: 1fr 50px;
-        grid-template-rows: 1fr 50px;
+    -ms-grid-rows: 60px 1fr 60px;
+        grid-template-rows: 60px 1fr 60px;
   }
   .TagsMenu-container {
     -ms-grid-row: 1;
@@ -1769,14 +1824,14 @@ label {
         grid-template-rows: min-content 1fr;
     overflow: hidden;
     border: 1px solid;
+    -ms-grid-row: 2;
+        grid-row-start: 2;
+    grid-row-end: 3;
   }
   .imageSelect-container {
     -ms-grid-column: 1;
         grid-column-start: 1;
     grid-column-end: 2;
-    -ms-grid-row: 2;
-        grid-row-start: 2;
-    grid-row-end: 3;
     bottom: 0;
     border-right: 1px solid;
     background-color: white;
@@ -1785,7 +1840,7 @@ label {
     border-right: none;
     border-left: none;
     border-top: none;
-    height: calc(100% - 49px);
+    height: 100%;
     z-index: 0;
   }
   .imageSelect-slide {
@@ -1819,7 +1874,12 @@ label {
     -webkit-transform: none;
             transform: none;
     overflow: hidden;
-    bottom: calc(100% - 49px);
+    bottom: 100%;
+    display: initial;
+  }
+  .enlargeContainer * {
+    -webkit-transition: 0s all !important;
+    transition: 0s all !important;
   }
   .enlarge-info {
     display: -webkit-box;
@@ -1839,8 +1899,6 @@ label {
     border-left: none;
   }
   .enlarge-scroll-down {
-    display: -ms-grid;
-    display: grid;
     -webkit-transform: translateY(0px);
             transform: translateY(0px);
     top: 0;
