--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -1,4 +1,5 @@
 @import './components/FilterTree';
+@import './components/mobileBars';
 
 *{
     margin:0;
@@ -223,9 +224,6 @@ font-family: 'Times New Roman', Times, serif;
     border-left: $border-dark;
     border-top: $border-dark;
     border-bottom: $border-light;
-}
-#button-next, #button-prev{
-    transition: 0.2s all;
 }
 
 .move-left{
@@ -956,22 +954,13 @@ font-family: 'Times New Roman', Times, serif;
 
 //MEDIA QUERY MOBILE *************************************************************************************************************
 @media only screen and (max-width: 720px) {
-    // .TagsMenu-Accordion-label:hover{
-    //     background-color: initial;
-    // }
     $hovercolor: white !important;
     .TagsMenu-category-title:hover *{
         color: black;
     }
-    .enlargeContainer *{
-        transition: 0s all !important;
-    }
     .ArtworkInfo-container{
         transition: 0.2s all !important;
     }
-    // *{
-    //     transition: 0s all !important;
-    // }
     #foreground{
         mix-blend-mode: unset;
     }
@@ -1096,7 +1085,7 @@ font-family: 'Times New Roman', Times, serif;
     }
     .frontEndIndex-container{
         grid-template-columns: 100%;
-        grid-template-rows: 1fr 50px;
+        grid-template-rows: 60px 1fr 60px;
     }
     .TagsMenu-container{
         grid-row-start: 1;
@@ -1137,12 +1126,12 @@ font-family: 'Times New Roman', Times, serif;
         grid-template-rows: min-content 1fr;
         overflow: hidden;
         border: 1px solid;
+        grid-row-start: 2;
+        grid-row-end: 3;
     }
     .imageSelect-container{
         grid-column-start: 1;
         grid-column-end: 2;
-        grid-row-start: 2;
-        grid-row-end: 3;
         bottom: 0;
         border-right: 1px solid;
         background-color: white;
@@ -1152,7 +1141,7 @@ font-family: 'Times New Roman', Times, serif;
         border-left: none;
         border-top: none;
         // height: 100%;
-        height: calc(100% - 49px);
+        height: 100%;
         z-index: 0;
     }
     .imageSelect-slide{
@@ -1179,7 +1168,11 @@ font-family: 'Times New Roman', Times, serif;
         border-left: none;
         transform: none;
         overflow: hidden;
-        bottom: calc(100% - 49px);
+        bottom: 100%;
+        display: initial;
+    }
+    .enlargeContainer *{
+        transition: 0s all !important;
     }
     .enlarge-info{
         display: flex;
@@ -1194,17 +1187,9 @@ font-family: 'Times New Roman', Times, serif;
         display: initial;
         border-left: none;
     }
-    // .pinch-to-zoom-container{
-    //     display: none;
-    //     border: none;
-    // }
     .enlarge-scroll-down{
-        display: grid;
         transform: translateY(0px);
         top: 0;
-        // .pinch-to-zoom-container{
-        //     display: initial;
-        // }
     }
     .scroll-down{
         top: 0;
